--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script defer src="js/jquery"></script>
     <title>Whooop Whooop - It's a Website</title>
   </head>
+  <!--End of Head-->
 
+  <!--Beginning of Main-->
   <main>
     <section class="container">
       <h4 class="text-green mt-20 mx-20">
@@ -65,7 +67,31 @@
             <p class="bg-dark p-2">Hiking</p>
           </div>
         </section>
+
+        <!--Beginning of: Hobbies and Interests-->
+        <ul class="col">
+          <h2 class="h5 mt-4">Experience & Expertise</h2>
+          <li class="badge badge-secondary">Ideation</li>
+          <li class="badge badge-secondary">Conceptual Design</li>
+          <li class="badge badge-secondary">Design Thinking</li>
+          <li class="badge badge-secondary">Business Modeling</li>
+        </ul>
+        <!--End of: Hobbies and Interests-->
+
+        <!--Beginning of: Hobbies and Interests-->
+        <h2 class="h5 mt-4">Hobbies & Interests</h2>
+        <ul class="col">
+          <li class="badge badge-secondary">Running</li>
+          <li class="badge badge-secondary">Dogs</li>
+          <li class="badge badge-secondary">Beatmaking</li>
+          <li class="badge badge-secondary">Baking & Cooking</li>
+          <li class="badge badge-secondary">Frisbee</li>
+          <li class="badge badge-secondary">Hiking</li>
+        </ul>
+        <!--End of: Hobbies and Interests-->
       </section>
     </body>
+    <!--End of Body-->
   </main>
+  <!--End of Main-->
 </html>
