--- a/index.html
+++ b/index.html
@@ -4,92 +4,154 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <script defer src="js/bootstrap.bundle.min.js"></script>
-    <script defer src="js/jquery"></script>
     <title>Whooop Whooop - It's a Website</title>
+
+    <!-- Bootstrap CSS-->
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
+
+    <!-- Bootstrap JS, just in case-->
+        <script defer src="js/jquery-3.5.1.js"></script>
+        <script defer src="js/popper.min.js"></script>
+        <script defer src="js/bootstrap.bundle.min.js"></script>
   </head>
   <!--End of Head-->
 
   <!--Beginning of Main-->
   <main>
-    <section class="container">
-      <h4 class="text-green mt-20 mx-20">
-        <a href="index.html">Julian Hartmann</a>
+    <header class="sticky-top mt-3 mb-1 mx-0 p-2 shadow bg-light ">
+      <h4 class="text-right mt-50 pt-50 mr-120 text-monospace ">
+        <a href="#top" class="0.25em">Julian Hartmann</a>
       </h4>
-      <nav class="row text-center text-gray">
-        <div class="col-4">
-          <h4><a href="index.html">Contact</a></h4>
+      <nav class="row text-center text-gray 0.25em">
+       <div class="col-8"></div>
+        <div class="col-2">
+          <a href="#contact-section">Contact</a>
         </div>
-        <div class="col-4">
-          <h4><a href="index.html">Biography</a></h4>
+        <div class="col-2">
+          <a href="#bio-section">Bio</a>
         </div>
       </nav>
-    </section>
-    <body>
+    </header>
+    <body class="container m-2">
       <section class="container">
         <img src="img/jujuhartmann Profile Pic.jpg" class="col" />
-        <p class="text-gray">This is just a face. Let it wash over.</p>
+        <p class="text-white bg-info px-2 text-center text-monospace">This is just a face. Let it wash over.</p>
       </section>
 
-      <section class="container">
-        <h2 class="h5 mt-4">Experience & Expertise</h2>
-        <section class="row text-center text-white">
-          <div class="col">
-            <p class="bg-dark p-2">Ideation</p>
-          </div>
-          <div class="col">
-            <p class="bg-dark p-2">Conceptual Design</p>
-          </div>
-          <div class="col">
-            <p class="bg-dark p-2">Design Thinking</p>
-          </div>
-        </section>
-      </section>
-      <section class="container">
-        <h2 class="h5 mt-4">Hobbies & Interests</h2>
-        <section class="row text-center text-white">
-          <div class="col-fluid mr-10 ml-10">
-            <p class="bg-dark p-2">Running</p>
-          </div>
-          <div class="col-fluid mr-10 ml-10">
-            <p class="bg-dark p-2">Dogs</p>
-          </div>
-          <div class="col-fluid mr-10 ml-10">
-            <p class="bg-dark p-2">Beatmaking</p>
-          </div>
-          <div class="col-fluid mr-10 ml-10">
-            <p class="bg-dark p-2">Baking & Cooking</p>
-          </div>
-          <div class="col-fluid mr-10 ml-10">
-            <p class="bg-dark p-2">Frisbee</p>
-          </div>
-          <div class="col-fluid mr-10 ml-10">
-            <p class="bg-dark p-2">Hiking</p>
-          </div>
-        </section>
-
-        <!--Beginning of: Hobbies and Interests-->
-        <ul class="col">
-          <h2 class="h5 mt-4">Experience & Expertise</h2>
+        <!--Beginning of: Experience & Expertise-->
+        <ul class="col my-2 p-1">
+          <h2 class="h5 mt-40">Experience & Expertise</h2>
           <li class="badge badge-secondary">Ideation</li>
           <li class="badge badge-secondary">Conceptual Design</li>
           <li class="badge badge-secondary">Design Thinking</li>
-          <li class="badge badge-secondary">Business Modeling</li>
+          <li class="badge badge-secondary">Business Modelling</li>
+          <li class="badge badge-secondary">Project Management</li>
+          <li class="badge badge-secondary">Dog Whispering</li>
+          <li class="badge badge-secondary">Sales</li>
         </ul>
-        <!--End of: Hobbies and Interests-->
+        <!--End of: Experience & Expertise-->
 
         <!--Beginning of: Hobbies and Interests-->
-        <h2 class="h5 mt-4">Hobbies & Interests</h2>
-        <ul class="col">
+        <ul class="col my-2 p-1">
+          <h2 class="h5 mt-40">Hobbies & Interests</h2>
           <li class="badge badge-secondary">Running</li>
           <li class="badge badge-secondary">Dogs</li>
           <li class="badge badge-secondary">Beatmaking</li>
           <li class="badge badge-secondary">Baking & Cooking</li>
           <li class="badge badge-secondary">Frisbee</li>
           <li class="badge badge-secondary">Hiking</li>
+          <li class="badge badge-secondary">Hamsterradsport</li>
         </ul>
         <!--End of: Hobbies and Interests-->
+
+      <!--Beginning of: Contact-->
+      <section class="cards p-10 " id="contact-section">
+
+          <article class="card p-2 rounded-corner border-right border-warning">
+            <h2>Contact</h2>
+            <!--img src="#" alt="" /> -->
+              <p>+49 151 1577 5377</p>
+              <p>j.hartmann@me.com</p>
+          </article>
+<p></p>
+
+
+
+
+
+          <article class="card p-2 rounded-corner border-right border-warning">
+            <header>
+              <h2>GitHub</h2>
+            </header>
+            <!--img src="#" alt="" /> -->
+            <div class="content">
+              <p><a href="https://www.">Let's get butt-naked and fork tonight @Octocatherdingclub</a></p>
+          </article>
+
+          <p></p>
+
+          <article class="card p-2 rounded-corner border-right border-warning">
+            <header>
+              <h2>CodePen</h2>
+            </header>
+            <!--img src="#" alt="" /> -->
+            <div class="content">
+              <p><a href="https://www.">CodePen</a></p>
+          </article>
+
+          <p></p>
+
+          <article class="card p-2 rounded-corner border-right border-warning">
+            <header>
+              <h2>LinkedIn</h2>
+            </header>
+            <!--img src="#" alt="" /> -->
+            <div class="content">
+              <p><a href="https://www.">LinkedIn</a></p>
+          </article>
+
       </section>
+      <!--End of: Contact-->
+
+            <!--Beginning of: Biography-->
+<section id="bio-section" class="row mx-20 mt-30">
+<h2>My Universe in a Nutshell</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates enim consectetur quos accusantium dicta velit quidem dolorum nulla fuga autem, maiores molestias, est eligendi! Deleniti, voluptatibus? Architecto deleniti ipsum non!
+Ex id at veniam minima quia magnam quaerat optio natus. Labore corporis officiis maxime molestiae aliquid commodi? Incidunt minima ab, nemo voluptas, vitae sit nesciunt reprehenderit id delectus deleniti aspernatur.
+Expedita asperiores saepe perferendis incidunt dicta, repellat, ea rerum architecto commodi tempore, doloremque nobis excepturi fugiat sint? In aliquid eum culpa veritatis! Nisi voluptatibus fugiat illum nobis. Quod, alias perferendis.
+Distinctio quaerat accusamus, non consequatur quod sint, laudantium soluta vitae nesciunt delectus nam at nemo quae. Nobis eius deleniti error esse ex ducimus, reiciendis adipisci possimus accusamus quia ipsum incidunt.</p>
+
+
+</section>
+
+><section>
+
+<table class="table table-striped table-dark table-bordered ">
+<!--  <thaed>
+    <th scope="col"></th>
+  </thaed>
+-->
+<tr>
+  <td>Mar 2019 - Aug 2020</td>
+  <td>Think Tank Manager <br>(Dubai)</td>
+</tr>
+<tr>
+  <td>Jan 2018 - Dec 2018</td>
+  <td>Concept & BM Lead <br>(Hamburg)</td>
+</tr>
+<tr>
+  <td>Mar 2016 - Oct 2017</td>
+  <td>Head of Operations <br>(Hamburg)</td>
+</tr>
+</table>
+
+</section>
+
+
+      <!--End of: Biography-->
+
+
+
     </body>
     <!--End of Body-->
   </main>
