Add GitHub image and minor changes to index.html

--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@
 
           <article class="card p-2 rounded-corner border-right border-warning">
             <header>
-              <h2>GitHub</h2>
+              <h2>Let's get butt-naked and fork tonight</h2>
             </header>
-            <!--img src="#" alt="" /> -->
+            <img src="img/octocat.jpg" alt="" href="https://github.com/jujuhartmann"/>
             <div class="content">
-              <p><a href="https://www.">Let's get butt-naked and fork tonight @Octocatherdingclub</a></p>
           </article>
 
           <p></p>
